Fixed resume download

--- a/src/resume.njk
+++ b/src/resume.njk
@@ -23,6 +23,6 @@ title: Resume
     {% endfor %}
     
     <section class="resume-cta">
-        <a href="{{ resume.ctaButtonLink }}" class="button">{{ resume.ctaButtonText }}</a>
+        <a href="{{ resume.resumePdf }}" class="button" download >{{ resume.ctaButtonText }}</a>
     </section>
 </div>
