--- a/src/_includes/layouts/project.njk
+++ b/src/_includes/layouts/project.njk
@@ -46,4 +46,5 @@ templateEngineOverride: njk,md
             <a href="/projects/" class="back-button">← Back to Projects</a>
         </footer>
     </article>
+    <script src="/js/collection-enhancer.js"></script>
 </div>
