--- a/src/index.njk
+++ b/src/index.njk
@@ -56,8 +56,8 @@ eleventyNavigation:
 
 <section class="cta">
     <div class="container">
-        <h2>{{ index.ctaHeading }}</h2>
-        <p>{{ index.ctaText }}</p>
-        <a href="{{ index.ctaButtonLink }}" class="button">{{ index.ctaButtonText }}</a>
+        <h2>{{ index.shopHeading }}</h2>
+        <p>{{ index.shopText }}</p>
+        <a href="{{ shop.highlightButtonLink }}" class="button" target="_blank">{{ shop.highlightButtonText }}</a>
     </div>
 </section>
