--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -8,8 +8,7 @@
                     <li><a href="/" {% if page.url == '/' %}class="active"{% endif %}>Home</a></li>
                     <li><a href="/projects/" {% if page.url == '/projects/' %}class="active"{% endif %}>Collections</a></li>
                     <li><a href="/gallery/" {% if page.url == '/gallery/' %}class="active"{% endif %}>Gallery</a></li>
-                    <li><a href="/bio/" {% if page.url == '/bio/' %}class="active"{% endif %}>Bio</a></li>
-                    <li><a href="/resume/" {% if page.url == '/resume/' %}class="active"{% endif %}>Resume</a></li>
+                    <li><a href="/about/" {% if page.url == '/about/' %}class="active"{% endif %}>about</a></li>
                     <li><a href="/contact/" {% if page.url == '/contact/' %}class="active"{% endif %}>Contact</a></li>
                     <li><a href="/shop/" {% if page.url =='/shop/' %}class="active"{% endif %}>Shop</a></li>
                 </ul>
