Fixed decorative square in bio and updated footer name

--- a/src/about.njk
+++ b/src/about.njk
@@ -9,8 +9,10 @@ title: {{ bio.pageHeader }}
     </section>
     
     <section class="bio-section">
-        <div class="bio-image">
-            <img src="{{ bio.bioImage }}" alt="Amie in her studio">
+        <div class="bio-image-container">
+            <div class="bio-image">
+                <img src="{{ bio.bioImage }}" alt="Amie in her studio">
+            </div>
         </div>
         <div class="bio-content">
             <h2>{{ bio.bioTitle }}</h2>
