--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; {{ page.date.getFullYear() }} Amie. All rights reserved.</p>
+            <p>&copy; {{ page.date.getFullYear() }} Amie Holstein. All rights reserved.</p>
         </div>
     </div>
 </footer>
