Updated button styles

--- a/src/_includes/layouts/project.njk
+++ b/src/_includes/layouts/project.njk
@@ -42,9 +42,11 @@ templateEngineOverride: njk,md
         </div>
         {% endif %}
         
-        <footer class="project-footer">
-            <a href="/projects/" class="back-button">← Back to Projects</a>
-        </footer>
+        <div class="artwork-navigation">
+            <a href="/projects/" class="nav-back">
+                Back to Projects
+            </a>
+        </div>
     </article>
     <script src="/js/collection-enhancer.js"></script>
 </div>
